config/common/base/generic/etc/firewall.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:SWARM-TCP - [0:0]
:SWARM-UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j SWARM-UDP
-A INPUT -p tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j SWARM-TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A SWARM-TCP -s 0.0.0.0/0 -p tcp -m tcp --dport 22    -m comment --comment "SSH" -j ACCEPT
-A SWARM-TCP -s 0.0.0.0/0 -p tcp -m tcp --dport 27287 -m comment --comment "SSH" -j ACCEPT
-A SWARM-TCP -s 0.0.0.0/0 -p tcp -m tcp --dport 3632  -m comment --comment "DISTCC" -j ACCEPT
COMMIT
